--- a/.github/workflows/03.yml
+++ b/.github/workflows/03.yml
@@ -86,7 +86,7 @@ jobs:
             cd 03
             cp ${{env.CURR}} $LFS/
             sudo ./prepare
-            sudo cpulimit -l 80 -f -- sudo ./timeout sudo chroot /mnt/lfs /usr/bin/env -i   \
+            sudo nice -n -19 sudo ./timeout sudo chroot /mnt/lfs /usr/bin/env -i   \
             HOME=/root                  \
             TERM="$TERM"                \
             PATH=/usr/bin:/usr/sbin     \
